# LibLR1-conv

./: .gitignore  CMakeLists.txt  README.md
include/LR1/: LR1.hpp  decoder.hpp  types.hpp
include/LR1/formats/: audio.hpp  bmp.hpp  srf.hpp
include/LR1/io/: BinaryReader.hpp  reader.hpp
include/LR1/jam/: JamExtractor.hpp  extractor.hpp
src/: types.cpp
src/formats/: audio.cpp  bmp.cpp  srf.cpp
src/io/: BinaryReader.cpp  reader.cpp
src/jam/: JamEntries.cpp  JamExtractor.cpp  entries.cpp  extractor.cpp
test/jam/: extractJam.cpp
test/res/: NORMAL.JAM  OTHER.JAM
